<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="setting_lable">Setting</string>
    <string name="action_settings">Settings</string>
    <string name="main_lable">Main</string>
    <string name="image_replacement">Image Cracked!</string>
    <string name="main_setting">설정</string>
    <string name="main_changeEmail">등록된 이메일 변경</string>
    <string name="main_changePassword">비밀번호 변경</string>
    <string name="main_support">도움말</string>
    <string name="setting_siren">경고음 출력 사용</string>
    <string name="setting_gps">위치 추적 사용</string>
    <string name="setting_smsShoot">전면 카메라 사용</string>
    <string name="setting_phoneLock">휴대폰 잠금 사용</string>
    <string name="setting_failShoot">잠금해제 실패 시 전면촬영</string>
    <string name="setting_contactBackup">주소록 백업 사용</string>
    <string name="setting_warningMsg">경고음 출력 메시지 설정</string>
    <string name="setting_lockMessage">휴대폰 잠금시 출력될 메시지 설정</string>
    <string name="setting_saveSetting">설정 완료</string>
    <string name="title_activity_signup">회원가입</string>
    <string name="signup_agreement_title">개인정보 저장 관련 약관</string>
    <string name="signup_agreement">먹는건가요? 우걱우걱</string> 
    <string name="signup_agreement_check">동의</string>
    <string name="signup_password">비밀번호(숫자 4자리)</string>
    <string name="signup_password_hint">4자리의 숫자를 입력해주세요</string>
    <string name="signup_birth">생년월일</string>
    <string name="signup_mail">이메일 주소</string>
    <string name="signup_mail_hint">이메일 형식에 맞춰 입력해주세요</string>
    <string name="signup_complete">가입</string>
    

</resources>